--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </form>
         <button class="reset_button">초기화</button>
       </section>
-      <div class="search_log">
+      <div id="hide" class="search_log">
         <h4>검색 기록:</h4>
         <ul class="search_log_list"></ul>
       </div>
