데이터가 없을 시 처리

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             type="text"
             placeholder="영화 제목을 검색해 보세요"
             id="search_input"
+            required
           />
           <button>검색</button>
         </form>
