--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
   </head>
   <body>
     <header>
-      <h1 class="header_title">Best Movie Collection</h1>
+      <h1 class="header-title">Best Movie Collection</h1>
     </header>
-    <div class="searchForm_log_wrapper">
-      <section class="search_container">
-        <form class="search_form">
-          <label for="search_input">Search Movie:</label>
+    <div class="searchForm-log-wrapper">
+      <section class="search-container">
+        <form class="search-form">
+          <label for="search-input">Search Movie:</label>
           <input
             type="text"
             placeholder="영화 제목을 검색해 보세요"
-            id="search_input"
-            required
-          />
-          <button>검색</button>
+            id="search-input"
+            required />
+          <button type="submit">검색</button>
         </form>
-        <button class="reset_button">초기화</button>
+        <button class="reset-button">초기화</button>
       </section>
-      <div id="hide" class="search_log">
+      <div id="hide" class="search-log">
         <h4>검색 기록:</h4>
-        <ul class="search_log_list"></ul>
+        <ul class="search-log-list"></ul>
       </div>
     </div>
 
-    <main class="movie_container">
+    <main class="movie-container">
       <!--JS로 UI 생성 -->
     </main>
 
